# Plaster

./: CMakeLists.txt  CMakeLists_core.txt  CMakeLists_minimal.txt  CMakeLists_simple.txt  CMakeLists_vcpkg.txt  LICENSE  README.md  UniformBuffers.h  build.bat  build.ps1  vcpkg.json
.cache/clangd/index/: AudioSystem.cpp.754D9CE9CC6A7F7D.idx  AudioSystem.h.D82385344E3FD432.idx  Engine.cpp.61436AA29FE6EF20.idx  InputManager.cpp.133D8FA83D61CE7B.idx  InputManager.h.0B63A7CDBFEFFF74.idx  PlastibooPalette.cpp.1D4E06E08ABA3512.idx  PlastibooPalette.h.0051C2B99A125849.idx  Renderer.cpp.05FFBA481A9CBED6.idx  Renderer.h.34DF43959A0FAFDC.idx  Scene.cpp.0B4C95683A0849B3.idx  SceneManager.cpp.F2C6FD9116464582.idx  Shader.cpp.1C79B613C37AC775.idx  Shader.h.C2442655834CFA32.idx  Window.cpp.78633E3E1C4EA5A6.idx  main.cpp.E3F0A3B6C5CCDABE.idx
.claude/: settings.local.json
include/: sndfile.h
include/AL/: al.h  alc.h
include/GLFW/: glfw3.h
include/glad/: glad.h
include/glm/: glm.hpp  glm_fixed.hpp
include/glm/gtc/: matrix_transform.hpp
include/spdlog/: spdlog_fixed.h
src/: main.cpp
src/assets/shaders/: basic.vert
src/assets/shaders/plastiboo/: medieval_lighting.frag  organic_noise_generator.frag  plastiboo_main.frag  plastiboo_postprocess.frag  ps1_vertex.vert  spatiotemporal_dither.frag  transformation.frag  transformation.vert
src/audio/: AudioSystem.cpp  AudioSystem.h
src/components/: Camera.cpp  Camera.h
src/core/: Engine.cpp  Engine.h
src/input/: InputManager.cpp  InputManager.h
src/platform/: CMakeLists.txt  Window.cpp  Window.h
src/renderer/: BlueNoiseGenerator.h  DescriptorManager.cpp  DescriptorManager.h  Mesh.cpp  Mesh.h  MeshPrimitives.cpp  MeshPrimitives.h  PlastibooMaterial.cpp  PlastibooMaterial.h  PlastibooPalette.cpp  PlastibooPalette.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  ShaderCompiler.cpp  ShaderCompiler.h  Shader_new.h  Texture.cpp  Texture.h  UniformBuffers.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererPlastiboo.cpp
src/scene/: Scene.cpp  Scene.h
src/shaders/: plastiboo.frag  plastiboo.vert
src/ui/: ImGuiManager.cpp  ImGuiManager.h  ImGuiTheme.cpp  ImGuiTheme.h  TestUI.h
